examples/valid/program15.c
int main(void) {
    int x;
    int y;
    x = 5;
    y = 10;
    if (x > 0 && y > 0) {
        return 1;
    }
    return 0;
}

