examples/invalid/program60.c
int main() {
    int x;
    x = 5;
    if (x >) {
        return 1;
    }
    return 0;
}

